Added vars.conf implementation

--- a/vars.conf
+++ b/vars.conf
@@ -1,8 +1,8 @@
 #CONFIG FILE
-VAR-NAMESPACE=namespace
-VAR-APP=application
-VAR-NAME=name
-VAR-PORT-NAME=port-name
-VAR-PORT=9090
-VAR-TARGET-PORT=90905
-VAR-APP=application
+NAMESPACE=namespace
+APP=application
+NAME=name
+PORT-NAME=port-name
+PORT=9090
+TARGET-PORT=90905
+APP=application
