--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "files.associations": {
         "stat.h": "c",
         "unistd.h": "c",
-        "readconfig.h": "c"
+        "readconfig.h": "c",
+        "types.h": "c"
     }
 }
