Added kubeconnector for new feature..

--- a/vars.conf
+++ b/vars.conf
@@ -1,4 +1,10 @@
 #CONFIG FILE
+[example.yaml]
+CONFIG{
+CFG-WAITTIME=60
+CFG-WAITARG=SOME TEXT
+}
+VARS{
 NAMESPACE=namespace
 APP=application
 NAME=name
@@ -6,3 +12,20 @@ PORT-NAME=port-name
 PORT=9090
 TARGET-PORT=90905
 APP-SELECTOR=application
+}
+#This is another config for example2 vars
+[kubernetes-deploy-ingress-lb.yaml]
+CONFIG{
+CFG-WAITTIME=60
+CFG-WAITARG=SOME TEXT
+}
+VARS{
+NAMESPACE=namespace
+APP=application
+NAME=name
+PORT-NAME=port-name
+PORT=9090
+TARGET-PORT=90905
+APP-SELECTOR=application
+}
+#end of file
