--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "stat.h": "c",
         "unistd.h": "c",
         "readconfig.h": "c",
-        "types.h": "c"
+        "types.h": "c",
+        "deployer_v2.h": "c"
     }
 }
