--- a/vars.conf
+++ b/vars.conf
@@ -1,5 +1,5 @@
 #CONFIG FILE
-[example.yaml]
+[./example/example.yaml]
 CONFIG{
 CFG-WAITTIME=60
 CFG-WAITARG=SOME TEXT
@@ -14,18 +14,18 @@ TARGET-PORT=90905
 APP-SELECTOR=application
 }
 #This is another config for example2 vars
-[kubernetes-deploy-ingress-lb.yaml]
+[example2]
 CONFIG{
 CFG-WAITTIME=60
 CFG-WAITARG=SOME TEXT
 }
 VARS{
-NAMESPACE=namespace
-APP=application
-NAME=name
-PORT-NAME=port-name
-PORT=9090
-TARGET-PORT=90905
-APP-SELECTOR=application
+NAMESPACE=namespace2
+APP=application2
+NAME=name2
+PORT-NAME=port-name2
+PORT=90902
+TARGET-PORT=909052
+APP-SELECTOR=application2
 }
 #end of file
