Added response handler

--- a/vars.conf
+++ b/vars.conf
@@ -28,4 +28,19 @@ PORT=90902
 TARGET-PORT=909052
 APP-SELECTOR=application2
 }
+
+[./example/notexample.yaml]
+CONFIG{
+CFG-WAITTIME=60
+CFG-WAITARG=SOME TEXT
+}
+VARS{
+NAMESPACE=namespace2
+APP=application2
+NAME=name2
+PORT-NAME=port-name2
+PORT=90902
+TARGET-PORT=909052
+APP-SELECTOR=application2
+}
 #end of file
