--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "unistd.h": "c",
         "readconfig.h": "c",
         "types.h": "c",
-        "deployer_v2.h": "c"
+        "deployer_v2.h": "c",
+        "dirent.h": "c"
     }
 }
