added config support for command for deploy each file declarated on config

--- a/vars.conf
+++ b/vars.conf
@@ -1,8 +1,9 @@
 #CONFIG FILE
-[./example/example.yaml]
+[example.yaml]
 CONFIG{
 CFG-WAITTIME=60
 CFG-WAITARG=SOME TEXT
+CFG-COMMAND=ls -lha
 }
 VARS{
 NAMESPACE=namespace
@@ -14,7 +15,7 @@ TARGET-PORT=90905
 APP-SELECTOR=application
 }
 #This is another config for example2 vars
-[example2]
+[example2.yaml]
 CONFIG{
 CFG-WAITTIME=60
 CFG-WAITARG=SOME TEXT
@@ -29,7 +30,7 @@ TARGET-PORT=909052
 APP-SELECTOR=application2
 }
 
-[./example/notexample.yaml]
+[notexample.yaml]
 CONFIG{
 CFG-WAITTIME=60
 CFG-WAITARG=SOME TEXT
